MSS-1327 Fixed Spacing Issue

--- a/oliviaburton_redesign/cartridges/app_custom_ob_redesign/cartridge/client/default/scss/product/detailRedesign.scss
+++ b/oliviaburton_redesign/cartridges/app_custom_ob_redesign/cartridge/client/default/scss/product/detailRedesign.scss
@@ -708,6 +708,7 @@
                                 line-height: rem(20);
                                 margin-bottom: rem(8);
                                 padding: 0;
+                                letter-spacing: 0;
                             }
 
                             @include media-breakpoint-up(xxl) {
